--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,10 @@ html {
 * {
   box-sizing: border-box;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  background-color: rgb(244, 244, 244);
+  color: #333;
+}
